# btsrch

./: .gitignore  Cargo.toml  btsrch.ahk  build_portable.bat  todo.txt  unicode.json
script_dependencies/: vaultHuntersAfterRestart.bat  vaultHuntersAfterRestart.lnk
src/: app_parser.rs  custom_commands_parser.rs  link_parser.rs  main.rs  path_parser.rs  query_manager.rs  test_parser.rs  unicode_parser.rs
src/unit_calc_parser/: interpreter.rs  lexer.rs  main.rs  mod.rs  parser.rs  unit_calculator.rs  unit_number_parser.rs
