[package]
name = "btsrch"
version = "0.1.0"
edition = "2024"

[dependencies]
arboard = "3.6.0"
async-trait = "0.1.88"
base64 = "0.22.1"
eframe = "0.32.0"
egui = "0.32.0"
image = "0.25.6"
open = "5.3.2"
regex = "1.11.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
single-instance = "0.3.3"
tokio = { version = "1.46.1", features = ["full"] }
x11rb = "0.13.1"
